[fix][dingo-calcite] Fixed errors when multiple-table updates